--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "firebase": "^10.7.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.314.0",
     "next": "14.1.0",
     "react": "^18",
